[B]4.1.1[/B]
- initial version of lamp addon