@@ -18,9 +18,9 @@ IndexOptions FancyIndexing HTMLTable VersionSort
 # We include the /icons/ alias for FancyIndexed directory listings.  If
 # you do not use FancyIndexing, you may comment this out.
 #
-Alias /icons/ "/usr/icons/"
+Alias /icons/ "/storage/.xbmc/userdata/addon_data/service.web.lamp/www/icons/"
 
-<Directory "/usr/icons">
+<Directory "/storage/.xbmc/userdata/addon_data/service.web.lamp/www/icons/">
     Options Indexes MultiViews
     AllowOverride None
     Require all granted
