@@ -80,11 +80,11 @@ SSLSessionCacheTimeout  300
 <VirtualHost _default_:443>
 
 #   General setup for the virtual host
-DocumentRoot "/usr/htdocs"
-ServerName www.example.com:443
+DocumentRoot "/storage/.xbmc/userdata/addon_data/service.web.lamp/www/htdocs"
+#ServerName www.example.com:443
 ServerAdmin you@example.com
-ErrorLog "/var/logs/error_log"
-TransferLog "/var/logs/access_log"
+ErrorLog "/storage/.xbmc/userdata/addon_data/service.web.lamp/srvroot/logs/error_log"
+TransferLog "/storage/.xbmc/userdata/addon_data/service.web.lamp/srvroot/logs/access_log"
 
 #   SSL Engine Switch:
 #   Enable/Disable SSL for this virtual host.
@@ -100,9 +100,9 @@ SSLEngine on
 #   Some ECC cipher suites (http://www.ietf.org/rfc/rfc4492.txt)
 #   require an ECC certificate which can also be configured in
 #   parallel.
-SSLCertificateFile "/etc/server.crt"
-#SSLCertificateFile "/etc/server-dsa.crt"
-#SSLCertificateFile "/etc/server-ecc.crt"
+SSLCertificateFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/server.crt"
+#SSLCertificateFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/server-dsa.crt"
+#SSLCertificateFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/server-ecc.crt"
 
 #   Server Private Key:
 #   If the key is not combined with the certificate, use this
@@ -110,9 +110,9 @@ SSLCertificateFile "/etc/server.crt"
 #   you've both a RSA and a DSA private key you can configure
 #   both in parallel (to also allow the use of DSA ciphers, etc.)
 #   ECC keys, when in use, can also be configured in parallel
-SSLCertificateKeyFile "/etc/server.key"
-#SSLCertificateKeyFile "/etc/server-dsa.key"
-#SSLCertificateKeyFile "/etc/server-ecc.key"
+SSLCertificateKeyFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/server.key"
+#SSLCertificateKeyFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/server-dsa.key"
+#SSLCertificateKeyFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/server-ecc.key"
 
 #   Server Certificate Chain:
 #   Point SSLCertificateChainFile at a file containing the
@@ -121,7 +121,7 @@ SSLCertificateKeyFile "/etc/server.key"
 #   the referenced file can be the same as SSLCertificateFile
 #   when the CA certificates are directly appended to the server
 #   certificate for convenience.
-#SSLCertificateChainFile "/etc/server-ca.crt"
+#SSLCertificateChainFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/server-ca.crt"
 
 #   Certificate Authority (CA):
 #   Set the CA certificate verification path where to find CA
@@ -130,8 +130,8 @@ SSLCertificateKeyFile "/etc/server.key"
 #   Note: Inside SSLCACertificatePath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCACertificatePath "/etc/ssl.crt"
-#SSLCACertificateFile "/etc/ssl.crt/ca-bundle.crt"
+#SSLCACertificatePath "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/ssl.crt"
+#SSLCACertificateFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/ssl.crt/ca-bundle.crt"
 
 #   Certificate Revocation Lists (CRL):
 #   Set the CA revocation path where to find CA CRLs for client
@@ -142,8 +142,8 @@ SSLCertificateKeyFile "/etc/server.key"
 #   Note: Inside SSLCARevocationPath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCARevocationPath "/etc/ssl.crl"
-#SSLCARevocationFile "/etc/ssl.crl/ca-bundle.crl"
+#SSLCARevocationPath "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/ssl.crl"
+#SSLCARevocationFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/ssl.crl/ca-bundle.crl"
 #SSLCARevocationCheck chain
 
 #   Client Authentication (Type):
@@ -160,7 +160,7 @@ SSLCertificateKeyFile "/etc/server.key"
 #   Requires OpenSSL 1.0.1 or newer. See the mod_ssl FAQ for
 #   detailed instructions on creating this file. Example:
 #   "openssl srp -srpvfile /etc/passwd.srpv -add username"
-#SSLSRPVerifierFile "/etc/passwd.srpv"
+#SSLSRPVerifierFile "/storage/.xbmc/userdata/addon_data/service.web.lamp/ssl/passwd.srpv"
 
 #   Access Control:
 #   With SSLRequire you can do per-directory access control based
@@ -208,7 +208,7 @@ SSLCertificateKeyFile "/etc/server.key"
 <FilesMatch "\.(cgi|shtml|phtml|php)$">
     SSLOptions +StdEnvVars
 </FilesMatch>
-<Directory "/usr/cgi-bin">
+<Directory "/storage/.xbmc/userdata/addon_data/service.web.lamp/www/cgi-bin">
     SSLOptions +StdEnvVars
 </Directory>
 
