@@ -62,6 +62,8 @@ Listen 4080
 # to be loaded here.
 #
 # Example:
+LoadModule authn_core_module mod_authn_core.so
+LoadModule socache_shmcb_module mod_socache_shmcb.so
 LoadModule access_compat_module mod_access_compat.so
 LoadModule actions_module mod_actions.so
 LoadModule alias_module mod_alias.so
@@ -128,7 +130,7 @@ LoadModule rewrite_module mod_rewrite.so
 
 LoadModule setenvif_module mod_setenvif.so
 #LoadModule speling_module mod_speling.so
-#LoadModule ssl_module mod_ssl.so
+LoadModule ssl_module mod_ssl.so
 #LoadModule status_module mod_status.so
 #LoadModule substitute_module mod_substitute.so
 #LoadModule unique_id_module mod_unique_id.so
@@ -182,7 +184,8 @@ ServerAdmin you@example.com
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 #ServerName www.example.com:80
-ServerName openelec:82
+# dominic7il: comment this out
+#ServerName openelec:82
 
 #
 # Deny access to the entirety of your server's filesystem. You must
@@ -190,7 +193,7 @@ ServerName openelec:82
 # <Directory> blocks below.
 #
 <Directory />
-    AllowOverride none
+    AllowOverride All
     Require all denied
 </Directory>
 
@@ -227,7 +230,7 @@ DocumentRoot "/storage/.xbmc/userdata/addon_data/service.web.lamp/www/htdocs"
     # It can be "All", "None", or any combination of the keywords:
     #   AllowOverride FileInfo AuthConfig Limit
     #
-    AllowOverride None
+    AllowOverride All
 
     #
     # Controls who can get stuff from this server.
@@ -340,7 +343,7 @@ LogLevel warn
 # CGI directory exists, if you have that configured.
 #
 <Directory "/storage/.xbmc/userdata/addon_data/service.web.lamp/www/cgi-bin">
-    AllowOverride None
+    AllowOverride All
     Options None
     Require all granted
 </Directory>
@@ -447,7 +450,9 @@ LogLevel warn
 #Include /storage/.xbmc/userdata/addon_data/service.web.lamp/srvroot/conf/extra/httpd-multilang-errordoc.conf
 
 # Fancy directory listings
-#Include /storage/.xbmc/userdata/addon_data/service.web.lamp/srvroot/conf/extra/httpd-autoindex.conf
+Include /storage/.xbmc/userdata/addon_data/service.web.lamp/srvroot/conf/extra/httpd-autoindex.conf
+ServerTokens Full
+ServerSignature On
 
 # Language settings
 #Include /storage/.xbmc/userdata/addon_data/service.web.lamp/srvroot/conf/extra/httpd-languages.conf
@@ -476,7 +481,7 @@ Include /storage/.xbmc/userdata/addon_data/service.web.lamp/srvroot/conf/extra/p
 </IfModule>
 
 # Secure (SSL/TLS) connections
-#Include /storage/.xbmc/userdata/addon_data/service.web.lamp/srvroot/conf/extra/httpd-ssl.conf
+Include /storage/.xbmc/userdata/addon_data/service.web.lamp/srvroot/conf/extra/httpd-ssl.conf
 #
 # Note: The following must must be present to support
 #       starting without SSL on platforms with no /dev/random equivalent
@@ -501,3 +506,41 @@ SSLRandomSeed connect builtin
 StartServers 2
 ServerLimit 5
 MaxRequestWorkers 5
+
+# for ssl to work
+KeepAlive Off
+
+# automatic mime type based descriptions your your directory listings as well as putting folders on top
+IndexOptions IgnoreCase FancyIndexing FoldersFirst
+AddDescription "MPEG Layer 3 Format" .mp3
+AddDescription "GZIP compressed TAR archive" .tgz .tar.gz
+AddDescription "GZIP compressed archive" .Z .z .gz .zip
+AddDescription "RAR compressed archive" .rar
+AddDescription "TAR compressed archive" .tar
+AddDescription "ZIP compressed archive" .zip
+AddDescription "Windows executable file" .exe
+AddDescription "Common Gateway Interface" .cgi
+AddDescription "Joint Photographics Experts Group" .jpg .jpeg .jpe
+AddDescription "Graphic Interchange Format" .gif
+AddDescription "Portable Network Graphic" .png
+AddDescription "Vector graphic" .ps .ai .eps
+AddDescription "Hypertext Markup Language" .html .shtml .htm
+AddDescription "Cascading Style Sheet" .css
+AddDescription "DocType Definition" .dtd
+AddDescription "Extensible Markup Language" .xml
+AddDescription "Win32 compressed HTML help" .chm
+AddDescription "Adobe Portable Document Format" .pdf
+AddDescription "Plain text file" .txt .nfo .faq .readme
+AddDescription "Unix man page" .man
+AddDescription "Email data" .eml .mbox
+AddDescription "Microsoft Word document" .doc
+AddDescription "PHP: Hypertext Preprocessor script" .php  .php3 .php4
+AddDescription "PHP: Hypertext Preprocessor source code" .phps
+AddDescription "Javascript" .js
+AddDescription "Java code"  .java
+AddDescription "Unix shell script" .sh .shar .csh .ksh .command
+AddDescription "Mac OS X shell script" .command
+AddDescription "Configuration file" .conf
+AddDescription "Mac OS X terminal" .term
+AddDescription "BitTorrent file" .torrent
+AddDescription "Windows link" .lnk .url
