@@ -1,0 +1,10 @@
+#
+# ssl-server.conf
+#
+
+[ req ]
+prompt = no
+distinguished_name = server_distinguished_name
+
+[ server_distinguished_name ]
+commonName             = openelec		                 # please update
